# voipbox_plugin

./: Dockerfile  README.md  pyproject.toml
phonebox_plugin/: __init__.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
phonebox_plugin/api/: serializers.py  views.py
phonebox_plugin/migrations/: 0005_number_custom_field_data_and_more.py  0006_number_site.py
phonebox_plugin/templates/phonebox_plugin/: number.html  voice_circuit_list_view_4.x.html
voipbox_plugin/: __init__.py  filters.py  forms.py  models.py  tables.py  template_content.py  views.py
voipbox_plugin/api/: serializers.py
voipbox_plugin/migrations/: 0002_pool_device.py
voipbox_plugin/templates/voipbox_plugin/: device_pool_links.html  pool.html
