[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["phonebox_plugin"]
package-data = {"phonebox_plugin" = ["**/*", "templates/**"]}


[tool.black]
line-length = 140

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.pylint]
max-line-length = 140

[tool.pyright]
include = ["phonebox_plugin"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 140

[project]
name = "phonebox-plugin"
version = "0.0.11"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers=[
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
keywords = ["netbox", "netbox-plugin"]
license = {file = "LICENSE"}


[project.urls]
Documentation = "https://github.com/iDebugAll/phonebox_plugin/blob/main/README.md"
Source = "https://github.com/iDebugAll/phonebox_plugin/"
Tracker = "https://github.com/iDebugAll/phonebox_plugin/issues"